# cel-memory

./: BACKENDS.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: backend_swap.rs  basic.rs  custom_provider.rs  write_hook.rs
src/: basic.rs  chunk.rs  conformance.rs  embedder.rs  error.rs  importance.rs  lib.rs  offdevice_hook.rs  ops.rs  provider.rs  query.rs  session.rs  summarizer.rs  write_hook.rs
tests/: conformance.rs
