[package]
name = "cel-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Local-first memory subsystem for AI agents. Trait surface, value types, and an in-memory reference provider. Storage implementations live in companion crates (e.g., cel-memory-sqlite)."
keywords = ["ai", "memory", "agent", "context", "llm"]
categories = ["asynchronous", "data-structures"]
readme = "README.md"

[dependencies]
async-trait = "0.1"
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { version = "1", features = ["sync"] }
uuid = { workspace = true, features = ["v7", "serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
