[package]
name = "cel-memory"
version = "0.1.8"
edition = "2021"
license = "Apache-2.0"
authors = ["Dimitrios Pagkratis <dimitris@timberhub.com>"]
homepage = "https://github.com/dimpagk92/cel-memory"
documentation = "https://docs.rs/cel-memory"
repository = "https://github.com/dimpagk92/cel-memory"
description = "Backend-agnostic memory traits and value types for AI agents, with scoped retrieval, sessions, and governance hooks."
keywords = ["ai", "memory", "agent", "context", "llm"]
categories = ["asynchronous", "data-structures"]
readme = "README.md"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["sync"] }
uuid = { version = "1", features = ["v7", "serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
